cabal-version:      3.0
name:               shields
version:            1.0.0
synopsis:           Shields.io endpoint for the Haskell Foundation.
description:        Stable endpoint for the best shields in Haskell town.
homepage:           https://github.com/haskellfoundation/shields
license:            Apache-2.0
license-file:       LICENSE.md
author:             Koz Ross
maintainer:         koz.ross@retro-freedom.nz
bug-reports:        https://github.com/haskellfoundation/shields/issues
copyright:          (C) The Haskell Foundation 2021
category:           Data
tested-with:        GHC ==8.10.4
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

-- Common section

common lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints

  default-language: Haskell2010

-- Library

library
  import:          lang
  exposed-modules: Shields
  build-depends:   base ==4.14
  hs-source-dirs:  src
