cabal-version:      3.0
name:               shields
version:            1.0.0
synopsis:           Shields.io endpoint for the Haskell Foundation.
description:        Stable endpoint for the best shields in Haskell town.
homepage:           https://github.com/haskellfoundation/shields
license:            Apache-2.0
license-file:       LICENSE.md
author:             Koz Ross
maintainer:         koz.ross@retro-freedom.nz
bug-reports:        https://github.com/haskellfoundation/shields/issues
copyright:          (C) The Haskell Foundation 2021
category:           Data
tested-with:        GHC ==8.10.4
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

-- Common section

common lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints

  default-language: Haskell2010

-- Library

library shields-lib
  import:          lang
  exposed-modules:
    Shields.Api
    Shields.Response

  build-depends:
    , base        ==4.14.1.0
    , binary      ^>=0.8.8.0
    , bytestring  ^>=0.10.12.1
    , io-streams  ^>=1.5.2.1
    , jsonifier   ^>=0.1.1
    , ptr-poker   ^>=0.1.1.3
    , snap-core   ^>=1.0.4.2

  hs-source-dirs:  src

library snap-client
  import:          lang
  visibility:      private
  exposed-modules: Snap.Client
  build-depends:
    , base       >=4.12.0.0 && <4.15.0.0
    , snap-core

  hs-source-dirs:  client

-- Executable

executable shields
  import:         lang
  main-is:        Main.hs
  build-depends:
    , base
    , shields-lib
    , snap-server  ^>=1.1.2.0

  ghc-options:    -O2 -threaded -with-rtsopts=-N
  hs-source-dirs: app

-- Tests

test-suite response
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:
    , base
    , case-insensitive  ^>=1.2.1.0
    , shields-lib
    , snap-core
    , tasty             ^>=1.4.1
    , tasty-hunit       ^>=0.10.0.3

  ghc-options:    -O2 -threaded -with-rtsopts=-N
  hs-source-dirs: test/response
